--- a/cume-client/src/components/Likes.css
+++ b/cume-client/src/components/Likes.css
@@ -7,3 +7,12 @@
     
 }
 
+@media only screen and (max-width: 480px)  {
+     .likesSpan{
+         float: right;
+         margin-right: 15%;
+     }
+     
+     
+    
+}
